--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ steps:
   inputs:
     command: install
 
+- script: npm install -g eslint
+- script: eslint -v
+
 - task: Npm@1
   displayName: 'npm test'
   inputs:
