Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
 
 - script: npm install -g eslint
 - script: eslint -v
+- script: eslint test.js
 
 - task: Npm@1
   displayName: 'npm test'
