--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 - script: npm install -g eslint
   displayName: 'ESLint install'
 
-- script: eslint
+- script: eslint test.js
   displayName: 'lint test'
   workingDirectory: $(Agent.BuildDirectory)
 
