--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 - script: npm install -g eslint
   displayName: 'ESLint install'
 
-- script: eslint test.js
+- script: eslint tests/**/*.js
   displayName: 'lint test'
 
 - task: Npm@1
